Add Crud Transactions model
